Add Feeder queues to IAM policy

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -679,7 +679,12 @@ Resources:
             Statement:
               - Action: sqs:*
                 Effect: Allow
-                Resource: !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:*_feeder_*
+                Resource:
+                  - !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:*_feeder_*
+                  - !GetAtt DefaultJobQueue.Arn
+                  - !GetAtt DefaultJobDeadletterQueue.Arn
+                  - !GetAtt FixerCallbackQueue.Arn
+                  - !GetAtt FixerCallbackDeadletterQueue.Arn
             Version: "2012-10-17"
           PolicyName: SqsFullApplicationAccess
         - PolicyDocument:
