Pass queue name ENV vars to Feeder worker

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -928,6 +928,10 @@ Resources:
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: DB_PORT_5432_TCP_PORT
               Value: !Ref SharedAuroraPostgresqlPort
+            - Name: DEFAULT_JOB_QUEUE_NAME
+              Value: !GetAtt DefaultJobQueue.QueueName
+            - Name: FIXER_CALLBACK_QUEUE_NAME
+              Value: !GetAtt FixerCallbackQueue.QueueName
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
