Add Lost Women in Science feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -189,3 +189,7 @@ Resources:
         # Project Brazen Originals: Fat Leonard
         - { Type: A, Name: !Sub "pf4242hgwp.${Domain}", AliasTarget: { DNSName: "d3gu3i3d1razd2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf4242hgwp.${Domain}", AliasTarget: { DNSName: "d3gu3i3d1razd2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Lost Women in Science
+        - { Type: A, Name: !Sub "pf3508lwos.${Domain}", AliasTarget: { DNSName: "dkbbxvpr4gs05.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf3508lwos.${Domain}", AliasTarget: { DNSName: "dkbbxvpr4gs05.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
