--- a/dns/earhustlesq.com-hosted_zone.yml
+++ b/dns/earhustlesq.com-hosted_zone.yml
@@ -15,12 +15,11 @@ Resources:
       HostedZoneConfig:
         Comment: Primary Ear Hustle domain
       HostedZoneTags:
-        - Key: Project
-          Value: Ear Hustle
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: Ear Hustle }
       Name: !Ref Domain
 
   Text:
