Explicit command for castle

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -191,7 +191,9 @@ Resources:
     Type: AWS::ECS::TaskDefinition
     Properties:
       ContainerDefinitions:
-        - Cpu: !If [IsProduction, 200, 128]
+        - Command:
+            - web
+          Cpu: !If [IsProduction, 200, 128]
           Environment:
             - Name: APP_NAME
               Value: castle
