--- a/stacks/container-apps/castle.prx.org.yml
+++ b/stacks/container-apps/castle.prx.org.yml
@@ -118,7 +118,9 @@ Resources:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
-        - Cpu: !Ref ContainerCpu
+        - Command:
+            - web
+          Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
               Value: "castle"
