Cleanup PG RDS endpoints and ports

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -245,7 +245,7 @@ Resources:
             - Name: POSTGRES_HOST
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -298,7 +298,7 @@ Resources:
             - Name: POSTGRES_HOST
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -458,7 +458,7 @@ Resources:
             - Name: POSTGRES_HOST
               Value: !Ref SharedAuroraPostgresqlEndpoint
             - Name: POSTGRES_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraPostgresqlPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
