Fix attribute name

--- a/stacks/shared-redis.yml
+++ b/stacks/shared-redis.yml
@@ -132,7 +132,7 @@ Outputs:
     Value: !Ref RedisReplicationGroup
   ReplicationGroupEndpointAddress:
     Description: Cache endpoint hostname
-    Value: !GetAtt RedisReplicationGroup.ConfigurationEndpoint.Address
+    Value: !GetAtt RedisReplicationGroup.ConfigurationEndPoint.Address
   ReplicationGroupEndpointPort:
     Description: Cache endpoint port
-    Value: !GetAtt RedisReplicationGroup.ConfigurationEndpoint.Port
+    Value: !GetAtt RedisReplicationGroup.ConfigurationEndPoint.Port
