--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -25,6 +25,8 @@ Parameters:
     Type: AWS::EC2::SecurityGroup::Id
   RootStackName:
     Type: String
+  RootStackId:
+    Type: String
 
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
