Disable shared Redis

--- a/stacks/shared-redis.yml
+++ b/stacks/shared-redis.yml
@@ -59,34 +59,34 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Common }
 
-  RedisReplicationGroup:
-    Type: AWS::ElastiCache::ReplicationGroup
-    UpdatePolicy:
-      UseOnlineResharding: true
-    Properties:
-      AtRestEncryptionEnabled: false
-      AutomaticFailoverEnabled: true
-      AutoMinorVersionUpgrade: false
-      CacheNodeType: !If [IsProduction, cache.t3.medium, cache.t3.micro]
-      CacheSubnetGroupName: !Ref RedisSubnetGroup
-      Engine: Redis
-      EngineVersion: 6.x
-      MultiAZEnabled: true
-      NumNodeGroups: 2 # 1 = cluster mode disabled, NodeGroups are Shards
-      ReplicasPerNodeGroup: 1 # **Update requires replacement** Replicas are nodes. N replicas will result in N+1 Nodes Per Shard.
-      ReplicationGroupDescription: !Sub Shared ${EnvironmentType} Redis
-      SecurityGroupIds:
-        - !GetAtt RedisSecurityGroup.GroupId
-      SnapshotRetentionLimit: 0 # 0 = automatic backups are disabled
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Common }
+  # RedisReplicationGroup:
+  #   Type: AWS::ElastiCache::ReplicationGroup
+  #   UpdatePolicy:
+  #     UseOnlineResharding: true
+  #   Properties:
+  #     AtRestEncryptionEnabled: false
+  #     AutomaticFailoverEnabled: true
+  #     AutoMinorVersionUpgrade: false
+  #     CacheNodeType: !If [IsProduction, cache.t3.medium, cache.t3.micro]
+  #     CacheSubnetGroupName: !Ref RedisSubnetGroup
+  #     Engine: Redis
+  #     EngineVersion: 6.x
+  #     MultiAZEnabled: true
+  #     NumNodeGroups: 2 # 1 = cluster mode disabled, NodeGroups are Shards
+  #     ReplicasPerNodeGroup: 1 # **Update requires replacement** Replicas are nodes. N replicas will result in N+1 Nodes Per Shard.
+  #     ReplicationGroupDescription: !Sub Shared ${EnvironmentType} Redis
+  #     SecurityGroupIds:
+  #       - !GetAtt RedisSecurityGroup.GroupId
+  #     SnapshotRetentionLimit: 0 # 0 = automatic backups are disabled
+  #     Tags:
+  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+  #       - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+  #       - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+  #       - { Key: prx:dev:family, Value: Dovetail }
+  #       - { Key: prx:dev:application, Value: Common }
 
   RedisMemoryLowAlarm:
     Type: AWS::CloudWatch::Alarm
