Add missing parameter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -769,6 +769,7 @@ Resources:
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
         RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackId
         OpsWarnMessagesSnsTopicArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
         OpsErrorMessagesSnsTopicArn:
