--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1273,6 +1273,7 @@ Resources:
         FeederAlbName: !GetAtt Apps200AStack.Outputs.FeederAlbName
         DovetailAlbName: !GetAtt Apps300AStack.Outputs.DovetailAlbName
         SharedMemcachedCacheName: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheName
+        SharedRedisReplicationGroupName: !GetAtt SharedRedisStack.Outputs.ReplicationGroupName
         CastleRedisCacheName: !GetAtt Apps200AStack.Outputs.CastleRedisCacheName
         CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
         SharedAlbVanityDomain: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
