--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -27,9 +27,11 @@ Parameters:
     Type: String
   RootStackId:
     Type: String
+  CloudWatchAlarmTaggerServiceToken:
+    Type: String
 
 Conditions:
-  CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Resources:
   SharedMemcachedSubnetGroup:
@@ -73,16 +75,16 @@ Resources:
     Properties:
       AutoMinorVersionUpgrade: true
       AZMode: !If
-        - CreateProductionResources
+        - IsProduction
         - cross-az
         - single-az
       Engine: memcached
       CacheNodeType: !If
-        - CreateProductionResources
+        - IsProduction
         - cache.t3.micro
         - cache.t3.micro
       NumCacheNodes: !If
-        - CreateProductionResources
+        - IsProduction
         - 2
         - 1
       CacheSubnetGroupName: !Ref SharedMemcachedSubnetGroup
@@ -96,9 +98,10 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
+
   SharedMemcachedSwapUsageAlarm:
     Type: AWS::CloudWatch::Alarm
-    Condition: CreateProductionResources
+    Condition: IsProduction
     Properties:
       ActionsEnabled: true
       AlarmName: "[Platform][Memcached][Swap] Swap exceeded 33 MB"
@@ -120,9 +123,24 @@ Resources:
       Statistic: Maximum
       Threshold: 33000000
       TreatMissingData: notBreaching
+  SharedMemcachedSwapUsageAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt SharedMemcachedSwapUsageAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+
   SharedMemcachedHighSwapUsageAlarm:
     Type: AWS::CloudWatch::Alarm
-    Condition: CreateProductionResources
+    Condition: IsProduction
     Properties:
       ActionsEnabled: true
       AlarmName: "[Platform][Memcached][Swap] Swap exceeded 50 MB"
@@ -144,6 +162,20 @@ Resources:
       Statistic: Maximum
       Threshold: 50000000
       TreatMissingData: notBreaching
+  SharedMemcachedHighSwapUsageAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt SharedMemcachedHighSwapUsageAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
 Outputs:
   CacheName:
