--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -104,7 +104,7 @@ Resources:
     Condition: IsProduction
     Properties:
       ActionsEnabled: true
-      AlarmName: "[Platform][Memcached][Swap] Swap exceeded 33 MB"
+      AlarmName: !Sub "[Platform][Memcached][Swap] Swap exceeded 33 MB ${VPC}"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
@@ -143,7 +143,7 @@ Resources:
     Condition: IsProduction
     Properties:
       ActionsEnabled: true
-      AlarmName: "[Platform][Memcached][Swap] Swap exceeded 50 MB"
+      AlarmName: !Sub "[Platform][Memcached][Swap] Swap exceeded 50 MB ${VPC}"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
