--- a/.github/workflows/theworld-org-dns-notifier.yml
+++ b/.github/workflows/theworld-org-dns-notifier.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - name: Send mail
         uses: dawidd6/action-send-mail@v3.5.0
-        with: 
+        with:
           # Required mail server address:
-          server_address: smtp.gmail.com
+          server_address: email-smtp.us-east-1.amazonaws.com
           # Required mail server port:
           server_port: 465
           # Optional (recommended): mail server username:
