--- a/.github/workflows/theworld-org-dns-notifier.yml
+++ b/.github/workflows/theworld-org-dns-notifier.yml
@@ -25,6 +25,6 @@ jobs:
           # Required recipients' addresses:
           to: tech-team@prx.org
           # Required sender full name (address can be skipped):
-          from: Luke Skywalker # <user@example.com>
+          from: PRX Tech Team <tech-team@prx.org>
           # Optional plain body:
           body: Build job of ${{github.repository}} completed successfully!
