--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -1,6 +1,6 @@
 # dns/radiotopia.com-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Hosted zone and record sets for theworld.org.
+Description: Hosted zone and record sets for theworld.org
 
 Parameters:
   Domain:
