Update notification body copy

--- a/.github/workflows/theworld-org-dns-notifier.yml
+++ b/.github/workflows/theworld-org-dns-notifier.yml
@@ -27,4 +27,4 @@ jobs:
           # Required sender full name (address can be skipped):
           from: PRX Tech Team <tech-team@prx.org>
           # Optional plain body:
-          body: Build job of ${{github.repository}} completed successfully!
+          body: A change was made to the DNS zone template for theworld.org
