Ignore GitHub workflows in CloudFormation linting

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
       - "pip3 install -r requirements.txt"
   build:
     commands:
-      - 'find . -name "*.yml" -type f ! -path "*/node_modules/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W --template'
+      - 'find . -name "*.yml" -type f ! -path "*/node_modules/*" ! -path "./.github/*" -mindepth 2 -print0 | xargs -0 -n1 cfn-lint --ignore-checks W --template'
       - "python3.8 -m black --check ./"
       - "python3.8 -m flake8"
       - "npm run tsc"
