Use cluster mode explicitly for shared Redis

--- a/stacks/shared-redis.yml
+++ b/stacks/shared-redis.yml
@@ -69,11 +69,12 @@ Resources:
       AutomaticFailoverEnabled: true
       AutoMinorVersionUpgrade: false
       CacheNodeType: !If [IsProduction, cache.t3.medium, cache.t3.micro]
+      CacheParameterGroupName: default.redis6.x.cluster.on
       CacheSubnetGroupName: !Ref RedisSubnetGroup
       Engine: Redis
       EngineVersion: 6.x
       MultiAZEnabled: true
-      NumNodeGroups: 1 # 1 = cluster mode disabled, NodeGroups are Shards
+      NumNodeGroups: 1 # NodeGroups are Shards. This replication group will always use cluster mode due to the parameter group.
       ReplicasPerNodeGroup: 1 # **Update requires replacement** Replicas are nodes. N replicas will result in N+1 Nodes Per Shard.
       ReplicationGroupDescription: !Sub Shared ${EnvironmentType} Redis
       SecurityGroupIds:
