Pass shared Redis params to 200A stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -31,6 +31,8 @@ Parameters:
   VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
+  SharedRedisReplicationGroupEndpointAddress: { Type: String }
+  SharedRedisReplicationGroupEndpointPort: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   EchoServiceToken: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
