--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -171,6 +171,8 @@ Resources:
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+        SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref CastleEcrImageTag
         SecretsVersion: !Ref CastleSecretsVersion
