Pass shared Redis params to 300A stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -30,6 +30,8 @@ Parameters:
   EchoServiceToken: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedRedisReplicationGroupEndpointAddress: { Type: String }
+  SharedRedisReplicationGroupEndpointPort: { Type: String }
   CastleRedisCachePrimaryEndPointAddress: { Type: String }
   CastleHostname: { Type: String }
   CorporateHostname: { Type: String }
