--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1179,6 +1179,8 @@ Resources:
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
+        SharedRedisReplicationGroupEndpointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointPort
         CastleRedisCachePrimaryEndPointAddress: !GetAtt Apps200AStack.Outputs.CastleRedisCachePrimaryEndPointAddress
         CastleHostname: !GetAtt Constants.CastleHostname
         CorporateHostname: !GetAtt Constants.CorporateHostname
