--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -27,7 +27,6 @@ Parameters:
   ArrangementsDynamodbRegion: { Type: AWS::SSM::Parameter::Value<String> }
   ArrangementsDynamodbTableName: { Type: AWS::SSM::Parameter::Value<String> }
   ArrangementsDynamodbAccessRoleArn: { Type: AWS::SSM::Parameter::Value<String> }
-  DovetailRedisHostname: { Type: String }
   DovetailS3Bucket: { Type: AWS::SSM::Parameter::Value<String> }
   DovetailS3ObjectStitchPrefix: { Type: AWS::SSM::Parameter::Value<String> }
   DovetailCdnLogsKinesisArn: { Type: AWS::SSM::Parameter::Value<String> }
@@ -75,7 +74,7 @@ Resources:
           ARRANGEMENTS_DDB_TABLE: !Ref ArrangementsDynamodbTableName
           KINESIS_IMPRESSION_STREAM: !Ref DovetailCountedBytesKinesisArn
           # REDIS_BACKUP_URL: !If [HasRedisBackupUrl, !Ref RedisBackupUrl, !Ref "AWS::NoValue"]
-          REDIS_URL: !Sub cluster://${DovetailRedisHostname}:6379
+          REDIS_URL: !Sub cluster://${SharedRedisReplicationGroupEndpointAddress}:6379
           S3_BUCKET: !Ref DovetailS3Bucket
           S3_PREFIX: !Ref DovetailS3ObjectStitchPrefix
       Events:
