Add discrete instance security group stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -856,6 +856,27 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs-cluster.yml
       TimeoutInMinutes: 20
+  SharedEcsAsgSecurityGroupStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !GetAtt Constants.CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackName
+        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        LoadBalancerSecurityGroupId: !GetAtt SharedAlbStack.Outputs.LoadBalancerSecurityGroupId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !GetAtt Constants.RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs-asg-sg.yml
+      TimeoutInMinutes: 20
   SharedEcsAsgStack:
     Type: AWS::CloudFormation::Stack
     Properties:
