--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -142,7 +142,7 @@ Resources:
 
   # This adds a rule to the load balancer security group defined in
   # shared-alb.yml. It allows all TCP egress traffic from the load balancer
-  # security group to to instance security group (i.e., allows traffic from
+  # security group to the instance security group (i.e., allows traffic from
   # the load balancer to the EC2 instances). It does NOT allow ingress traffic
   # from the load balancer to the EC2 instances; that is handled by a rule on
   # the instance security group.
@@ -154,6 +154,18 @@ Resources:
       # Based on the following recommednation
       # https://aws.amazon.com/premiumsupport/knowledge-center/troubleshoot-unhealthy-checks-ecs/#Correctly_configure_the_security_groups_attached_to_your_load_balancer_and_container_instance
       DestinationSecurityGroupId: !GetAtt InstanceSecurityGroup.GroupId
+      FromPort: 0
+      GroupId: !Ref LoadBalancerSecurityGroupId
+      IpProtocol: tcp
+      ToPort: 65535
+  LoadBalancerSecurityGroupInstanceEgress2:
+    Type: AWS::EC2::SecurityGroupEgress
+    Properties:
+      Description: >-
+        Allow all egress traffic from the LB SG to the instance SG.
+      # Based on the following recommednation
+      # https://aws.amazon.com/premiumsupport/knowledge-center/troubleshoot-unhealthy-checks-ecs/#Correctly_configure_the_security_groups_attached_to_your_load_balancer_and_container_instance
+      DestinationSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
       FromPort: 0
       GroupId: !Ref LoadBalancerSecurityGroupId
       IpProtocol: tcp
@@ -183,7 +195,7 @@ Resources:
             DeleteOnTermination: true
             DeviceIndex: 0
             Groups:
-              - !Ref InstanceSecurityGroup
+              - !Ref SharedEcsAsgInstanceSecurityGroupId
               - !Ref EcsLaunchEndpointsAccessSecurityGroupId
               - !Ref KmsEndpointAccessSecurityGroupId
             Ipv6AddressCount: 1
@@ -482,10 +494,5 @@ Resources:
       RetentionInDays: 7
 
 Outputs:
-  InstanceSecurityGroupId:
-    Description: >-
-      The group ID of the primary security group for EC2 instances belonging to
-      the shared ASG
-    Value: !GetAtt InstanceSecurityGroup.GroupId
   AsgName:
     Value: !Ref Asg
